--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app/src/main/java/com/github/gotifynotiftester/gotify"]
-	path = app/src/main/java/com/github/gotifynotiftester/gotify
-	url = https://github.com/gougeon-s/android-connector
+[submodule "gotify_connector"]
+	path = gotify_connector
+	url = https://github.com/p1gp1g/android-connector
