--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".services.CustomNotif" android:exported="true"/>
+        <!-- To use a custom notification (do not forget to comment com.github.gotify.connector.GotifyServiceNotification): -->
+        <!--<service android:name=".services.CustomNotif" android:exported="true"/>-->
+        <service android:name="com.github.gotify.connector.GotifyServiceNotification" android:exported="true" />
     </application>
 
 </manifest>
