--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.github.gotifynotiftester"
+        applicationId "com.github.gotify.connector.template"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
