--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.gotifynotiftester">
+    package="com.github.gotify.connector.template">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
-        <activity android:name=".activities.CheckActivity"></activity>
-        <activity android:name=".activities.MainActivity">
+        <activity android:name="com.github.gotify.connector.template.activities.CheckActivity"></activity>
+        <activity android:name="com.github.gotify.connector.template.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <!-- We need to expose the service to handle notifications -->
-        <service android:name=".services.CustomNotif" android:exported="true"/>
+        <service android:name="com.github.gotify.connector.template.services.CustomGotifyNotificationService" android:exported="true"/>
     </application>
 
 </manifest>
